Fix wrong search bar text color in dark mode

--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ input[type="checkbox"] {
 
 	#searchbar {
 		background-color: #29292d;
-		color: #ff0000;
+		color: #efeff3;
 	}
 
 	#searchbar:focus,
